test/scc/expr/semantic-errors/166.a
166.t:4:19: error: braces around scalar initializer